AUTOMAKE_OPTIONS = foreign subdir-objects

bin_PROGRAMS = bwfmetaedit-gui
bwfmetaedit_gui_SOURCES = \
    ../../../Source/Common/Common_About.cpp \
    ../../../Source/Common/Core.cpp \
    ../../../Source/GUI/Qt/App.cpp \
    ../../../Source/GUI/Qt/GUI_About.cpp \
    ../../../Source/GUI/Qt/GUI_Help.cpp \
    ../../../Source/GUI/Qt/GUI_Main.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Core_Table.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Core_Text.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Menu.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Output_Log.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Output_stderr.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Output_Trace.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Technical_Table.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Technical_Text.cpp \
    ../../../Source/GUI/Qt/GUI_Main_UndoDialog.cpp \
    ../../../Source/GUI/Qt/GUI_Main_xxxx__Common.cpp \
    ../../../Source/GUI/Qt/GUI_Main_xxxx_Bext.cpp \
    ../../../Source/GUI/Qt/GUI_Main_xxxx_CodingHistoryDialog.cpp \
    ../../../Source/GUI/Qt/GUI_Main_xxxx_DateDialog.cpp \
    ../../../Source/GUI/Qt/GUI_Main_xxxx_Loudness.cpp \
    ../../../Source/GUI/Qt/GUI_Main_xxxx_TextEditDialog.cpp \
    ../../../Source/GUI/Qt/GUI_Main_xxxx_TimeReferenceDialog.cpp \
    ../../../Source/GUI/Qt/GUI_Main_xxxx_UmidDialog.cpp \
    ../../../Source/GUI/Qt/GUI_Preferences.cpp \
    ../../../Source/MD5/md5.c \
    ../../../Source/Riff/Riff_Base.cpp \
    ../../../Source/Riff/Riff_Base_Streams.cpp \
    ../../../Source/Riff/Riff_Chunks_.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE__PMX.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_aXML.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_bext.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_data.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_ds64.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_FLLR.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_fmt_.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_INFO.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_INFO_xxxx.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_iXML.cpp \
    ../../../Source/Riff/Riff_Chunks_WAVE_MD5_.cpp \
    ../../../Source/Riff/Riff_Handler.cpp \
    ../../../Source/TinyXml2/tinyxml2.cpp \
    ../../../Source/ZenLib/Conf.cpp \
    ../../../Source/ZenLib/CriticalSection.cpp \
    ../../../Source/ZenLib/Dir.cpp \
    ../../../Source/ZenLib/File.cpp \
    ../../../Source/ZenLib/FileName.cpp \
    ../../../Source/ZenLib/InfoMap.cpp \
    ../../../Source/ZenLib/int128s.cpp \
    ../../../Source/ZenLib/int128u.cpp \
    ../../../Source/ZenLib/MemoryDebug.cpp \
    ../../../Source/ZenLib/OS_Utils.cpp \
    ../../../Source/ZenLib/Translation.cpp \
    ../../../Source/ZenLib/Thread.cpp \
    ../../../Source/ZenLib/Utils.cpp \
    ../../../Source/ZenLib/Ztring.cpp \
    ../../../Source/ZenLib/ZtringList.cpp \
    ../../../Source/ZenLib/ZtringListList.cpp \
    ../../../Source/ZenLib/ZtringListListF.cpp \
    _Automated/moc_GUI_About.cpp \
    _Automated/moc_GUI_Help.cpp \
    _Automated/moc_GUI_Main.cpp \
    _Automated/moc_GUI_Main_Technical_Table.cpp \
    _Automated/moc_GUI_Main_Technical_Text.cpp \
    _Automated/moc_GUI_Main_Core_Table.cpp \
    _Automated/moc_GUI_Main_Core_Text.cpp \
    _Automated/moc_GUI_Main_Output_Log.cpp \
    _Automated/moc_GUI_Main_Output_stderr.cpp \
    _Automated/moc_GUI_Main_Output_Trace.cpp \
    _Automated/moc_GUI_Main_UndoDialog.cpp \
    _Automated/moc_GUI_Main_xxxx__Common.cpp \
    _Automated/moc_GUI_Main_xxxx_CodingHistoryDialog.cpp \
    _Automated/moc_GUI_Main_xxxx_Bext.cpp \
    _Automated/moc_GUI_Main_xxxx_DateDialog.cpp \
    _Automated/moc_GUI_Main_xxxx_Loudness.cpp \
    _Automated/moc_GUI_Main_xxxx_TextEditDialog.cpp \
    _Automated/moc_GUI_Main_xxxx_TimeReferenceDialog.cpp \
    _Automated/moc_GUI_Main_xxxx_UmidDialog.cpp \
    _Automated/moc_GUI_Preferences.cpp \
    _Automated/qrc_GUI_Main.cpp

#bwfmetaedit_gui_LDFLAGS     = -no-undefined -version-info 0:0:0
AM_CXXFLAGS = -std=c++11

AM_CPPFLAGS = -I../../../Source
